# produccion-proyect

./: .gitignore  INTEGRATION_GUIDE.md  README.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
.github/workflows/: azure-deploy.yml  ci.yml
api-gateway/: .env  .env.example  requirements.txt
api-gateway/app/: auth.py  client.py  config.py  main.py  middleware.py  routes.py
back-end/: .env.example  .gitignore  README.md  init_db.py  pyproject.toml  requirements.txt
back-end/app/: auth.py  config.py  db.py  email_service.py  main.py  models.py  mongo_utils.py  servicio_notificaciones.py
back-end/app/routes/: __init__.py  agenda_inscriptions.py  attendance.py  auth.py  calendar.py  conferences.py  sessions.py  speakers.py  stats.py  student_agenda.py  users.py
carpeta-laura/: laura.txt
conferences-service/: Dockerfile  requirements.txt
conferences-service/app/: agenda_seed.py  auth.py  config.py  db.py  events.py  main.py  models.py  routes_conferences.py  routes_student_agenda.py
front-end/: .env  .env.example  .gitignore  Dockerfile  README.md  index.html  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
front-end/src/: App.tsx  ErrorBoundary.tsx  main.tsx
k8s/: README.md  apps.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml  stateful-services.yaml
notification-service/: .env.example  Dockerfile  requirements.txt
notification-service/app/: email.py  (+4 more)
src/: App.tsx  ErrorBoundary.tsx  index.css  main.tsx
users-service/: requirements.txt
(+79 files in other folders)
